--- a/about.html
+++ b/about.html
@@ -40,9 +40,8 @@
     </header>
 
     <!-- About Section -->
-    <main style="padding-top: 120px;"> <!-- Compense la hauteur de l'en-tête -->
-        <div class="container">
-            <div class="row align-items-center">
+    <div class="about container d-flex flex-column flex-md-row align-items-center min-vh-100">
+        <div class="row text-center">
             <!--Texte à gauche-->
             <div class="col-md-6">
                 <h1 class="about-title">About<br>Me</h1>
@@ -84,9 +83,8 @@
                 <p>Si vous avez des opportunités, n'hésitez pas à me contacter !</p>
                 <p class="mt-3"> <a href="contact.html" class="btn btn-primary">Me contacter</a> </p>
             </div>
-            </div>
         </div>
-    </main>
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
