--- a/home.html
+++ b/home.html
@@ -40,9 +40,8 @@
         </div>
     </header>
 
-    <main style="padding-top: 120px;"> <!-- Compense la hauteur de l'en-tête -->
-        <div class="container">
-            <div class="row align-items-center">
+    <div class="Skills container d-flex flex-column flex-md-row align-items-center min-vh-100">
+        <div class="row text-center">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
                     <h1 class="Home-title"><strong><em>Welcome to My Portfolio !</em></strong></h1>
@@ -56,9 +55,8 @@
                     <img src="assets/image_photo.png" alt="Ethan Lavogez" class="profile-img" style="margin-top: 0;">
                         <p class="quote"><em>Transformez les données en solutions pour un avenir meilleur.</em></p>
                 </div>
-            </div>
         </div>
-    </main>
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
