--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
         </div>
     </header>
 
-    <div class="Skills container d-flex flex-column flex-md-row align-items-center min-vh-100">
+    <div class="home container d-flex flex-column flex-md-row align-items-center min-vh-100">
         <div class="row text-center">
                 <!--Left Section-->
                 <div class="col-md-6 text-left">
