--- a/experience.html
+++ b/experience.html
@@ -130,6 +130,7 @@
                             <li>Développement de mes connaissances des différents équipements biomédicaux et leurs utilisations au sein d'un hôpital</li>
                         </ul>
                         <p><strong>Ce que j'ai appris :</strong> Cette expérience m’a permis de mettre en pratique mes compétences tout en développant de nouvelles aptitudes techniques et relationnelles essentielles dans le domaine biomédical et hospitalier.</p>
+                        <p><strong>Pour plus de détails, consultez mon <a href="assets/Rapport_stage_IB.pdf" target="_blank">Rapport de stage IB</a>.</strong></p>
                     </div>
                  </div>
 
@@ -158,6 +159,7 @@
                             <li>Communication et collaboration</li>
                         </ul>
                         <p><strong>Ce que j'ai appris :</strong> Cette expérience m'a permis de contribuer à l'amélioration du projet HéliSMUR et d'acquérir un ensemble de compétences qui me sont précieuses pour la réussite de mes études ainsi que pour ma carrière future dans le domaine de la data science et des services de santé.</p>
+                        <p><strong>Pour plus de détails, consultez mon <a href="assets/Rapport_stage_CERIM.pdf" target="_blank">Rapport de stage IB</a>.</strong></p>
                     </div>
                  </div>
             </div>
