--- a/experience.html
+++ b/experience.html
@@ -159,7 +159,7 @@
                             <li>Communication et collaboration</li>
                         </ul>
                         <p><strong>Ce que j'ai appris :</strong> Cette expérience m'a permis de contribuer à l'amélioration du projet HéliSMUR et d'acquérir un ensemble de compétences qui me sont précieuses pour la réussite de mes études ainsi que pour ma carrière future dans le domaine de la data science et des services de santé.</p>
-                        <p><strong>Pour plus de détails, consultez mon <a href="assets/Rapport_stage_CERIM.pdf" target="_blank">Rapport de stage IB</a>.</strong></p>
+                        <p><strong>Pour plus de détails, consultez mon <a href="assets/Rapport_stage_CERIM.pdf" target="_blank">Rapport de stage CERIM</a>.</strong></p>
                     </div>
                  </div>
             </div>
