--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             <!--Image à droite-->
             <!-- Photo ou image inspirante -->
             <div class=" about-image col-md-6 text-center">
-                <img src="assets/image_data_sante.png" alt="Data science" class="img-fluid">
+                <img src="assets/photo_ethan.JPG" alt="Data science" class="img-fluid">
             </div>
             <!-- Carte Stage -->
             <div class="stage-announcement">
