--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 
                 <!-- Right Section -->
                 <div class="col-md-6 text-center">
-                    <img src="assets/image_photo.png" alt="Ethan Lavogez" class="profile-img" style="margin-top: 0;">
+                    <img src="assets/photo_ethan.JPG" alt="Ethan Lavogez" class="profile-img" style="margin-top: 0;">
                         <p class="quote"><em>Transformez les données en solutions pour un avenir meilleur.</em></p>
                 </div>
         </div>
