Mise à jour du parcours : ajout de mon dernier stage et nouvelles compétences

--- a/experience.html
+++ b/experience.html
@@ -162,6 +162,35 @@
                         <p><strong>Pour plus de détails, consultez mon <a href="assets/Rapport_stage_CERIM.pdf" target="_blank">Rapport de stage CERIM</a>.</strong></p>
                     </div>
                  </div>
+
+                 <!-- Expérience 5 -->
+                 <div class="timeline-item">
+                    <div class="circle">5</div>
+                    <div class="timeline-content">
+                        <img src="assets/image_CH_Lens.png" alt="CH Lens" class="experience-logo">
+                        <h3>Data Scientist - CH Lens</h3>
+                        <p><strong>Type d'emploi :</strong> Stage</p>
+                        <p><strong>Lieu :</strong> Centre Hospitalier, Lens, France</p>
+                        <p><strong>Durée :</strong> Mars 2025 - Août 2025</p>
+                        <p><strong>Missions :</strong></p>
+                        <ul>
+                            <li>Réécriture des scripts SAS en langage R</li>
+                            <li>Participation aux travaux DIM sur la valorisation des données</li>
+                            <li>Analyse et confrontation des données médicales</li>
+                            <li>Connexion et exploitation des données du DPI ORBIS</li>
+                        </ul>
+                        <p><strong>Objectif :</strong> Migration et valorisation des données de santé : Transition des requêtes SAS vers R tout en garantissant la sécurité des patients et la conformité aux normes hospitalières et intégration au DPI ORBIS. </p>
+                        <p><strong>Compétences développées :</strong></p>
+                        <ul>
+                            <li>Programmation en R et SQL.</li>
+                            <li>Curiosité et implication afin de comprendre les objectifs, enjeux et méthodes utilisées.</li>
+                            <li>Rigueur et à l'écoute.</li>
+                            <li>Collaboration et travail d'équipe.</li>
+                            <li>Adaptabilité et apprentissage continu.</li>
+                        </ul>
+                        <p><strong>Ce que j'ai appris :</strong> Au cours de ce stage, j’ai renforcé ma maîtrise de la programmation R et des requêtes SQL appliquées aux données de santé et découvert les enjeux et les contraintes du DIM (Département d’Information Médicale).</p>
+                    </div>
+                 </div>
             </div>
         </div>
     </div>
