Mise à jour du parcours : ajout de mon dernier stage et nouvelles compétences

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                 <!-- Carte CV -->
                 <div class="cv-download mt-4">
                     <h2>Lien pour télécharger mon CV</h2>
-                    <a href="assets/mon_cv.pdf" class="btn btn-primary" download>Download my CV</a>
+                    <a href="assets/CV_alternance.docx" class="btn btn-primary" download>Download my CV</a>
                 </div>
         </div>
     </div>        
