--- a/home.html
+++ b/home.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <!-- viewport ok -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio – Ethan Lavogez</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-          rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio - Ethan Lavogez</title>
+  <!-- Feuilles de style Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- CSS personnalisé -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- Navbar responsive -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="home.html">
-          <h1 class="h4 m-0">Ethan Lavogez</h1>
+        <!-- Nom du site (marque) + slogan -->
+        <a class="navbar-brand d-flex flex-column" href="home.html">
+          <h1 class="m-0">Ethan Lavogez</h1>
+          <h3 class="m-0">Student in Healthcare Data Science</h3>
         </a>
-        <button class="navbar-toggler" type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Menu">
+        <!-- Bouton burger pour mobile -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Basculer la navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+        <!-- Liens du menu -->
+        <div class="collapse navbar-collapse" id="mainNavbar">
+          <ul class="navbar-nav nav nav-tabs ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="home.html">Home</a>
+              <a class="nav-link active" href="home.html" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">À propos</a>
+              <a class="nav-link" href="about.html">À propos de moi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="skills.html">Compétences</a>
@@ -49,29 +47,30 @@
         </div>
       </div>
     </nav>
+  </header>
 
-    <!-- Section d'accueil responsive -->
-    <main class="container py-5">
-      <div class="row align-items-center min-vh-75">
-        <!-- Texte -->
-        <div class="col-12 col-md-6 text-center text-md-start mb-4 mb-md-0">
-          <h2 class="fw-bold"><em>Welcome to My Portfolio !</em></h2>
-          <p>Dans ce portfolio, vous découvrirez mes compétences, mon parcours et ma vision de l'utilisation des données pour améliorer les résultats en santé. J’espère que vous trouverez ces informations utiles et inspirantes.</p>
-          <p>Merci de votre visite ! N’hésitez pas à me contacter pour toute question ou opportunité de collaboration.</p>
-          <a href="about.html" class="btn btn-primary">Explorez-moi</a>
+  <!-- Section d'accueil -->
+  <section class="home-section">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <!-- Colonne gauche : texte de bienvenue et bouton -->
+        <div class="col-12 col-md-6 text-center text-md-start">
+          <h2 class="Home-title">Bienvenue sur mon Portfolio</h2>
+          <p>Je suis un data scientist passionné par la santé et la technologie.</p>
+          <p><a href="about.html" class="btn btn-primary mt-3">Explorez-moi</a></p>
+          <p class="quote">« Les données sont le nouveau pétrole. »</p>
         </div>
-        <!-- Image -->
+        <!-- Colonne droite : photo de profil -->
         <div class="col-12 col-md-6 text-center">
-          <img src="assets/photo_ethan.JPG"
-               alt="Ethan Lavogez"
-               class="img-fluid rounded-circle mb-3"
-               style="max-width: 300px;">
-          <p class="fst-italic">« Transformez les données en solutions pour un avenir meilleur. »</p>
+          <img src="assets/profile.jpg" alt="Photo de profil" class="profile-img img-fluid" />
         </div>
       </div>
-    </main>
+    </div>
+  </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- JavaScript Bootstrap 5 (avec Popper pour la navigation) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
